--- a/1.css
+++ b/1.css
@@ -25,8 +25,12 @@ header {
     background: hsl(191, 88%, 65%);
     position: relative;
     height: 30px;
+    font-weight: bold;
 
     
+}
+section {
+    width: 100%;
 }
 /* Styling the logo */
 .logo {
@@ -39,24 +43,24 @@ header {
 
 
 
+
+
 .logo-part-2 {
     padding: 5px 10px;
-    border: 2px solid #761ba3; /* Blue border */
-    border-radius: 8px;
+    border: 2px solid #761ba3;
+    clip-path: polygon(1% 0%, 100% 0%, 99% 100%, 0% 100%);
     font-weight: bolder;
-    color: #761ba3;
 }
-
 
 .nav-links {
     list-style: none;
     display: flex;
-    gap: 50px;
+    
 }
 
 .nav-links li a {
     text-decoration: none;
-    color: #333;
+    color: #0e1e2e;
 }
 
 .get-started {
@@ -119,21 +123,64 @@ header {
     text-transform: uppercase;
 }
 
-.logo-part-1 {
-    background: linear-gradient(45deg, #00C6FF, #0072FF); /* Blue gradient */
+
+.logo-part-2 {
+    background: linear-gradient(45deg, #c317af, #d31bb2); /* Red gradient */
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
-.logo-part-2 {
-    background: linear-gradient(45deg, #f85032, #e73827); /* Red gradient */
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
 
 /* Navigation links */
 .nav-links {
     list-style: none;
     display: flex;
+    gap: 70px;
+}
+.nav-links li a {
+    text-decoration: none;
+    color: #0e1e2e;
+    position: relative;
+}
+
+.nav-links li a::after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 2px;
+    background-color: #0e1e2e; /* Set the underline color */
+    left: 0;
+    bottom: -5px; /* Adjust the distance from the text */
+    transition: width 0.3s ease-in-out; /* Smooth transition */
+}
+
+.nav-links li a:hover::after {
+    width: 100%; /* Full underline on hover */
+}
+.gallery {
+    text-align: center;
+    padding: 5px 10%;
+    background-color:#ffffff;
+}
+
+.gallery h2 {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+}
+
+.gallery p {
+    font-size: 1.2rem;
+    margin-bottom: 30px;
+}
+
+.gallery-images {
+    display: flex;
+    justify-content: center;
     gap: 20px;
+}
+
+.gallery-images img {
+    width: 300px;
+    height: auto;
+    border-radius: 10px;
 }
